tests/ui/parser/emoji-identifiers.rs
struct ABigрҹ‘©вҖҚрҹ‘©вҖҚрҹ‘§вҖҚрҹ‘§Family; //~ ERROR identifiers cannot contain emoji
struct рҹ‘Җ; //~ ERROR identifiers cannot contain emoji
impl рҹ‘Җ {
    fn full_of_вңЁ() -> рҹ‘Җ { //~ ERROR identifiers cannot contain emoji
        рҹ‘Җ
    }
}
fn i_like_to_рҹҳ…_a_lot() -> рҹ‘Җ { //~ ERROR identifiers cannot contain emoji
    рҹ‘Җ::full_ofвңЁ() //~ ERROR no associated function or constant named `full_ofвңЁ` found for struct `рҹ‘Җ`
    //~^ ERROR identifiers cannot contain emoji
}
fn main() {
    let _ = i_like_to_рҹҳ„_a_lot() вһ– 4; //~ ERROR cannot find function `i_like_to_рҹҳ„_a_lot` in this scope
    //~^ ERROR identifiers cannot contain emoji
    //~| ERROR unknown start of token: \u{2796}

    let рҹҰҖ = 1;//~ ERROR Ferris cannot be used as an identifier
    dbg!(рҹҰҖ);
}
